--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,11 @@ VITE_APP_VERSION=1.0.0
 VITE_APP_DESCRIPTION=The On-Chain Dollar Revolution
 VITE_DOMAIN=theusdox.com
 
+# Deployment Configuration (Keep Private)
+VERCEL_TOKEN=your_vercel_api_token_here
+VERCEL_ORG_ID=your_vercel_org_id_here
+VERCEL_PROJECT_ID=your_vercel_project_id_here
+
 # Social Media Links
 VITE_TWITTER_URL=https://twitter.com/theusdox
 VITE_DISCORD_URL=https://discord.gg/usdox
