--- a/.env.example
+++ b/.env.example
@@ -1,52 +1,43 @@
 # USDOX DApp Environment Configuration Template
 # Copy this file to .env and fill in your actual values
 
-# Blockchain RPC URLs
+# ---------------- Blockchain RPC URLs ----------------
 VITE_BSC_RPC=https://bsc-dataseed1.binance.org/
 VITE_BSC_TESTNET_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
-VITE_ETHEREUM_RPC=https://mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
-VITE_POLYGON_RPC=https://polygon-rpc.com/
+VITE_ETHEREUM_RPC=https://bsc-mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
 
-# Contract Addresses (Update with actual deployed addresses)
-VITE_USDOX_CONTRACT=0xYOUR_DEPLOYED_USDOX_CONTRACT_ADDRESS
-VITE_VAULT_CONTRACT=0xYOUR_DEPLOYED_VAULT_CONTRACT_ADDRESS
-VITE_ORACLE_CONTRACT=0xYOUR_DEPLOYED_ORACLE_CONTRACT_ADDRESS
+# ---------------- Contract Addresses ----------------
+VITE_USDOX_CONTRACT=0xYOUR_USDOX_CONTRACT_ADDRESS
+VITE_RUSDOX_CONTRACT=0xYOUR_RUSDOX_CONTRACT_ADDRESS
+VITE_STAKING_REWARD_CONTRACT=0xYOUR_STAKING_REWARD_CONTRACT_ADDRESS
+VITE_MASTER_CHEF_CONTRACT=0xYOUR_MASTER_CHEF_CONTRACT_ADDRESS
+VITE_OWNER1_ADDRESS=0xYOUR_OWNER1_ADDRESS
+VITE_OWNER2_ADDRESS=0xYOUR_OWNER2_ADDRESS
 
-# API Keys (Replace with your own keys)
-VITE_ALCHEMY_KEY=your_alchemy_api_key_here
-VITE_INFURA_API_KEY=your_infura_project_id_here
-VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
-VITE_0X_API_KEY=your_0x_api_key_here
-
-# Blockchain Explorer API Keys
+# ---------------- API Keys ----------------
+VITE_ALCHEMY_RPC=https://bnb-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+VITE_INFURA_RPC=https://bsc-mainnet.infura.io/v3/YOUR_INFURA_PROJECT_ID
 VITE_ETHERSCAN_API_KEY=your_etherscan_api_key_here
-VITE_BSCSCAN_API_KEY=your_bscscan_api_key_here
-VITE_POLYGONSCAN_API_KEY=your_polygonscan_api_key_here
-VITE_ARBISCAN_API_KEY=your_arbitrum_scan_api_key_here
-VITE_OPTIMISMSCAN_API_KEY=your_optimism_scan_api_key_here
-
-# Price Feed APIs
 VITE_COINMARKETCAP_API_KEY=your_coinmarketcap_api_key_here
-VITE_COINGECKO_API_KEY=your_coingecko_api_key_here
 
-# Development Settings
-VITE_ENVIRONMENT=development
-VITE_DEBUG=true
-VITE_NETWORK=bsc-testnet
+# ---------------- App Settings ----------------
+VITE_ENVIRONMENT=production
+VITE_DEBUG=false
+VITE_NETWORK=bsc-mainnet
 
-# Website Configuration
 VITE_APP_NAME=TheUSDOX
 VITE_APP_VERSION=1.0.0
 VITE_APP_DESCRIPTION=The On-Chain Dollar Revolution
 VITE_DOMAIN=theusdox.com
+VITE_DEVELOPER_EMAIL=hello@theusdox.com
 
-# Deployment Configuration (Keep Private)
+# ---------------- Social Links ----------------
+VITE_TWITTER_URL=https://x.com/TheUSDOXs
+VITE_TELEGRAM_URL=https://t.me/theusdox
+VITE_DISCORD_URL=https://discord.gg/K49Nu2Jbz
+VITE_GITHUB_URL=https://github.com/theusdox
+
+# ---------------- Deployment Configuration ----------------
 VERCEL_TOKEN=your_vercel_api_token_here
 VERCEL_ORG_ID=your_vercel_org_id_here
-VERCEL_PROJECT_ID=your_vercel_project_id_here
-
-# Social Media Links
-VITE_TWITTER_URL=https://twitter.com/theusdox
-VITE_DISCORD_URL=https://discord.gg/usdox
-VITE_GITHUB_URL=https://github.com/VKATHUSHAN/theusdox-dapp
-VITE_DOCS_URL=https://docs.theusdox.com 
+VERCEL_PROJECT_ID=your_vercel_project_id_here 
