--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -33,21 +33,24 @@ jobs:
         VITE_BSC_TESTNET_RPC: ${{ secrets.VITE_BSC_TESTNET_RPC }}
         VITE_ETHEREUM_RPC: ${{ secrets.VITE_ETHEREUM_RPC }}
         VITE_USDOX_CONTRACT: ${{ secrets.VITE_USDOX_CONTRACT }}
-        VITE_VAULT_CONTRACT: ${{ secrets.VITE_VAULT_CONTRACT }}
-        VITE_ORACLE_CONTRACT: ${{ secrets.VITE_ORACLE_CONTRACT }}
-        VITE_ALCHEMY_KEY: ${{ secrets.VITE_ALCHEMY_KEY }}
-        VITE_INFURA_API_KEY: ${{ secrets.VITE_INFURA_API_KEY }}
-        VITE_WALLETCONNECT_PROJECT_ID: ${{ secrets.VITE_WALLETCONNECT_PROJECT_ID }}
-        VITE_0X_API_KEY: ${{ secrets.VITE_0X_API_KEY }}
+        VITE_RUSDOX_CONTRACT: ${{ secrets.VITE_RUSDOX_CONTRACT }}
+        VITE_STAKING_REWARD_CONTRACT: ${{ secrets.VITE_STAKING_REWARD_CONTRACT }}
+        VITE_MASTER_CHEF_CONTRACT: ${{ secrets.VITE_MASTER_CHEF_CONTRACT }}
+        VITE_OWNER1_ADDRESS: ${{ secrets.VITE_OWNER1_ADDRESS }}
+        VITE_OWNER2_ADDRESS: ${{ secrets.VITE_OWNER2_ADDRESS }}
+        VITE_ALCHEMY_RPC: ${{ secrets.VITE_ALCHEMY_RPC }}
+        VITE_INFURA_RPC: ${{ secrets.VITE_INFURA_RPC }}
+        VITE_ETHERSCAN_API_KEY: ${{ secrets.VITE_ETHERSCAN_API_KEY }}
+        VITE_COINMARKETCAP_API_KEY: ${{ secrets.VITE_COINMARKETCAP_API_KEY }}
         VITE_APP_NAME: "TheUSDOX"
         VITE_APP_VERSION: "1.0.0"
         VITE_APP_DESCRIPTION: "The On-Chain Dollar Revolution"
         VITE_DOMAIN: "theusdox.com"
-        VITE_DEVELOPER_EMAIL: "dkathushan@gmail.com"
-        VITE_TWITTER_URL: "https://twitter.com/theusdox"
-        VITE_DISCORD_URL: "https://discord.gg/usdox"
-        VITE_GITHUB_URL: "https://github.com/VKATHUSHAN/theusdox-dapp"
-        VITE_DOCS_URL: "https://docs.theusdox.com"
+        VITE_DEVELOPER_EMAIL: "hello@theusdox.com"
+        VITE_TWITTER_URL: "https://x.com/TheUSDOXs"
+        VITE_TELEGRAM_URL: "https://t.me/theusdox"
+        VITE_DISCORD_URL: "https://discord.gg/K49Nu2Jbz"
+        VITE_GITHUB_URL: "https://github.com/theusdox"
         VITE_ENVIRONMENT: "production"
         VITE_DEBUG: "false"
         VITE_NETWORK: "bsc-mainnet"
