--- a/website/vercel.json
+++ b/website/vercel.json
@@ -13,21 +13,24 @@
     "VITE_BSC_TESTNET_RPC": "@vite_bsc_testnet_rpc",
     "VITE_ETHEREUM_RPC": "@vite_ethereum_rpc",
     "VITE_USDOX_CONTRACT": "@vite_usdox_contract",
-    "VITE_VAULT_CONTRACT": "@vite_vault_contract",
-    "VITE_ORACLE_CONTRACT": "@vite_oracle_contract",
-    "VITE_ALCHEMY_KEY": "@vite_alchemy_key",
-    "VITE_INFURA_API_KEY": "@vite_infura_api_key",
-    "VITE_WALLETCONNECT_PROJECT_ID": "@vite_walletconnect_project_id",
-    "VITE_0X_API_KEY": "@vite_0x_api_key",
+    "VITE_RUSDOX_CONTRACT": "@vite_rusdox_contract",
+    "VITE_STAKING_REWARD_CONTRACT": "@vite_staking_reward_contract",
+    "VITE_MASTER_CHEF_CONTRACT": "@vite_master_chef_contract",
+    "VITE_OWNER1_ADDRESS": "@vite_owner1_address",
+    "VITE_OWNER2_ADDRESS": "@vite_owner2_address",
+    "VITE_ALCHEMY_RPC": "@vite_alchemy_rpc",
+    "VITE_INFURA_RPC": "@vite_infura_rpc",
+    "VITE_ETHERSCAN_API_KEY": "@vite_etherscan_api_key",
+    "VITE_COINMARKETCAP_API_KEY": "@vite_coinmarketcap_api_key",
     "VITE_APP_NAME": "TheUSDOX",
     "VITE_APP_VERSION": "1.0.0",
     "VITE_APP_DESCRIPTION": "The On-Chain Dollar Revolution",
     "VITE_DOMAIN": "theusdox.com",
-    "VITE_DEVELOPER_EMAIL": "dkathushan@gmail.com",
-    "VITE_TWITTER_URL": "https://twitter.com/theusdox",
-    "VITE_DISCORD_URL": "https://discord.gg/usdox",
-    "VITE_GITHUB_URL": "https://github.com/VKATHUSHAN/theusdox-dapp",
-    "VITE_DOCS_URL": "https://docs.theusdox.com"
+    "VITE_DEVELOPER_EMAIL": "hello@theusdox.com",
+    "VITE_TWITTER_URL": "https://x.com/TheUSDOXs",
+    "VITE_TELEGRAM_URL": "https://t.me/theusdox",
+    "VITE_DISCORD_URL": "https://discord.gg/K49Nu2Jbz",
+    "VITE_GITHUB_URL": "https://github.com/theusdox"
   },
   "functions": {
     "src/pages/api/**/*.js": {
