--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "name": "theusdox-website",
   "build": {
     "env": {
       "VITE_ENVIRONMENT": "production",
@@ -9,19 +8,6 @@
     }
   },
   "env": {
-    "VITE_BSC_RPC": "@vite_bsc_rpc",
-    "VITE_BSC_TESTNET_RPC": "@vite_bsc_testnet_rpc",
-    "VITE_ETHEREUM_RPC": "@vite_ethereum_rpc",
-    "VITE_USDOX_CONTRACT": "@vite_usdox_contract",
-    "VITE_RUSDOX_CONTRACT": "@vite_rusdox_contract",
-    "VITE_STAKING_REWARD_CONTRACT": "@vite_staking_reward_contract",
-    "VITE_MASTER_CHEF_CONTRACT": "@vite_master_chef_contract",
-    "VITE_OWNER1_ADDRESS": "@vite_owner1_address",
-    "VITE_OWNER2_ADDRESS": "@vite_owner2_address",
-    "VITE_ALCHEMY_RPC": "@vite_alchemy_rpc",
-    "VITE_INFURA_RPC": "@vite_infura_rpc",
-    "VITE_ETHERSCAN_API_KEY": "@vite_etherscan_api_key",
-    "VITE_COINMARKETCAP_API_KEY": "@vite_coinmarketcap_api_key",
     "VITE_APP_NAME": "TheUSDOX",
     "VITE_APP_VERSION": "1.0.0",
     "VITE_APP_DESCRIPTION": "The On-Chain Dollar Revolution",
@@ -30,13 +16,12 @@
     "VITE_TWITTER_URL": "https://x.com/TheUSDOXs",
     "VITE_TELEGRAM_URL": "https://t.me/theusdox",
     "VITE_DISCORD_URL": "https://discord.gg/K49Nu2Jbz",
-    "VITE_GITHUB_URL": "https://github.com/theusdox"
+    "VITE_GITHUB_URL": "https://github.com/theusdox",
+    "VITE_ENVIRONMENT": "production",
+    "VITE_DEBUG": "false",
+    "VITE_NETWORK": "bsc-mainnet"
   },
-  "functions": {
-    "src/pages/api/**/*.js": {
-      "maxDuration": 30
-    }
-  },
+
   "redirects": [
     {
       "source": "/home",
