--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,12 +1,6 @@
 {
-  "version": 2,
-  "build": {
-    "env": {
-      "VITE_ENVIRONMENT": "production",
-      "VITE_DEBUG": "false",
-      "VITE_NETWORK": "bsc-mainnet"
-    }
-  },
+  "buildCommand": "npm run build",
+  "framework": "nextjs",
   "env": {
     "VITE_APP_NAME": "TheUSDOX",
     "VITE_APP_VERSION": "1.0.0",
@@ -21,13 +15,6 @@
     "VITE_DEBUG": "false",
     "VITE_NETWORK": "bsc-mainnet"
   },
-
-  "redirects": [
-    {
-      "source": "/home",
-      "destination": "/"
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
