--- a/package.json
+++ b/package.json
@@ -5,31 +5,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md}\"",
-    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,md}\"",
-    "test": "echo \"No tests specified\" && exit 0",
-    "lighthouse": "lhci autorun",
-    "security-audit": "npm audit"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@metamask/sdk": "^0.33.1",
+    "@metamask/sdk-react": "^0.20.0",
+    "@react-three/drei": "^9.59.3",
+    "@react-three/fiber": "^8.13.1",
+    "@tanstack/react-query": "^4.36.0",
+    "@uniswap/sdk-core": "^4.0.0",
+    "@uniswap/v3-sdk": "^3.10.0",
+    "@walletconnect/modal": "^2.6.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "ethers": "^6.9.0",
     "framer-motion": "^7.6.12",
-    "@react-three/fiber": "^8.13.1",
-    "@react-three/drei": "^9.59.3",
-    "tailwindcss": "^3.5.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.0",
+    "viem": "^1.19.0",
+    "wagmi": "^1.4.0"
   },
   "devDependencies": {
-    "vite": "^5.3.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.32.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.0",
-    "@lhci/cli": "^0.12.0"
+    "vite": "^5.3.0"
   }
 }
